# getmem_tg_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  container.py
backend/app/adapters/: __init__.py  anthropic_llm.py  getmem_memory.py  http_transcriber.py  openai_compat.py  openrouter_llm.py
backend/app/api/: __init__.py  app.py  auth.py  deps.py  routes.py  schemas.py
backend/app/bot/: __init__.py  formatting.py  keyboards.py  runner.py  scheduler.py  texts.py
backend/app/bot/handlers/: __init__.py  admin.py  chat.py  commands.py  payments.py
backend/app/core/: __init__.py  config_store.py  context_builder.py  limits.py  ports.py  router.py  runtime.py  scheduling.py  service.py  templates.py
backend/app/db/: __init__.py  base.py  models.py  repo.py
backend/app/entrypoints/: api.py  bot.py
backend/app/templates/: 00-personal-assistant.json  01-support-faq.json  02-language-tutor.json  03-fitness-coach.json  04-study-buddy.json  05-travel-planner.json  06-coding-helper.json  07-journal-companion.json  08-community-concierge.json  09-sales-qualifier.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_app_settings.py  0003_user_role.py  0004_user_moderation.py  0005_role_enabled.py  0006_user_is_admin.py  0007_user_profile.py  0008_scheduling.py  0009_schedule_interval.py
backend/tests/: conftest.py  test_auth.py  test_chat_split.py  test_config.py  test_formatting.py  test_limits.py  test_llm.py  test_runtime_context.py  test_scheduling.py
bot/: __init__.py  __main__.py  config.py  keyboards.py  limits.py  llm.py  memory.py  service.py  storage.py  texts.py
bot/handlers/: __init__.py  chat.py  commands.py  payments.py
deploy/: Caddyfile  README.md  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  proxy.Caddyfile
deploy/render/: Caddyfile  Dockerfile
docs/: USE_CASES.md
miniapp/: .dockerignore  .env.example  DESIGN.md  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
miniapp/app/: globals.css  layout.tsx  page.tsx
miniapp/components/: ActivityList.tsx  AdminPanel.tsx  AdminTab.tsx  AppHeader.tsx  Card.tsx  ErrorState.tsx  ModelPicker.tsx  OpenInTelegram.tsx  ProfileCard.tsx  ProfileEditor.tsx  PromptEditor.tsx  RoleEditor.tsx  ScheduleCalendar.tsx  ScheduleWizard.tsx  SchedulesTab.tsx  SettingsTab.tsx  Skeleton.tsx  TabBar.tsx  TotalsCards.tsx  UpgradeCard.tsx  UsageChart.tsx  UsageRing.tsx  ui.tsx
miniapp/components/admin/: AdminOverview.tsx  BroadcastForm.tsx  ProvidersEditor.tsx  RuntimeEditor.tsx  SetupWizard.tsx  TemplateGallery.tsx  TemplatesManager.tsx  TiersEditor.tsx  UsersManager.tsx
miniapp/components/ui/: TimezonePicker.tsx
miniapp/lib/: api.ts  format.ts  image.ts  schedule.ts  telegram.ts  types.ts  useApi.ts
scripts/: install.sh
tests/: conftest.py  test_chat_split.py  test_limits.py  test_llm.py  test_storage.py
transcriber/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  whisper_model.py
