[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmem-telegram-bot"
version = "0.1.0"
description = "A memory-first Telegram chat bot: aiogram v3 + OpenRouter free models + GetMem long-term memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GetMem community" }]
keywords = ["telegram", "bot", "aiogram", "openrouter", "getmem", "memory", "llm", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiogram>=3.13,<4",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    # Long-term memory SDK. Vendored under third_party/ for an out-of-the-box
    # build until it's published to PyPI; see README "Memory SDK".
    "getmem-ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
getmem-bot = "bot.__main__:main"

[project.urls]
Homepage = "https://getmem.ai"
Repository = "https://github.com/getmem-ai/getmem_tg_bot"

# Resolve the vendored SDK locally so `uv sync` / `pip install -e .` works
# without the package being on PyPI yet. Drop this block once it's published.
[tool.uv.sources]
getmem-ai = { path = "third_party/getmem-ai", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["bot", "tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
