[project]
name = "getmem-tg-bot-backend"
version = "0.2.0"
description = "Memory-first Telegram bot + Mini App API: aiogram v3, OpenRouter, GetMem, Postgres."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GetMem community" }]
dependencies = [
    "aiogram>=3.22,<4",
    "openai>=2.0,<3",
    "anthropic>=0.40",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # Long-term memory SDK — vendored locally until published to PyPI.
    "getmem-ai",
]

[project.scripts]
getmem-bot = "app.entrypoints.bot:main"
getmem-api = "app.entrypoints.api:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

# Resolve the vendored SDK from the local path so `uv sync` works without the
# package being on PyPI yet. Drop this block once it's published.
[tool.uv.sources]
getmem-ai = { path = "vendor/getmem-ai" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
