[project]
name = "getmem-tg-bot-transcriber"
version = "0.2.0"
description = "Optional voice-transcription microservice (faster-whisper) for the GetMem Telegram bot."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.0,<2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[tool.uv]
# This service is a couple of flat modules (app.py, whisper_model.py), not an
# installable package — uv only manages the environment.
package = false
